--- a/different practice/myScrapper/myApp/templates/index.html
+++ b/different practice/myScrapper/myApp/templates/index.html
@@ -6,7 +6,9 @@
     <title>Document</title>
 </head>
 <body style="background-color: black;">
-    <h1>total </h1>
+    <h1 style="color: red;">total {{size}}</h1>
+
+
     {% for i in data %}
         <h1 style="color: rgb(0, 238, 255); background-color: black;">{{i}}</h1>
     {% endfor %}
